# CS_EnterpriseI_archive

./: .gitignore  .gitmodules
ROS/: README.md
ROS/C++/: README.md
ROS/C++/ros_cse_actuator_driver/: CMakeLists.txt  README.md  TEST.md  nodelets.xml  package.xml
ROS/C++/ros_cse_actuator_driver/include/cse_actuator_driver/: Constants.h  PCA9685.h  cse_actuator_driver.hpp  cse_actuator_driver_nodelet.hpp  interp.hpp
ROS/C++/ros_cse_actuator_driver/src/: PCA9685.cpp  cse_actuator_driver.cpp  cse_actuator_driver_node.cpp  cse_actuator_driver_nodelet.cpp
ROS/matlab/: publish_gains.m  ros_rpi_setup.m  rosbag_plot.asv  rosbag_plot.m  rosbag_plot_obs.asv  rosbag_plot_obs.m  rt_plot.m  rt_plot_obs.asv  rt_plot_obs.m  set_parameters.asv  set_parameters.m
ROS/simulink/: CSEI_HIL.slx  ctrl_joy.slx  ctrl_student.slx  ctrl_student_ros.slx  obs_student.slx  observer_student.slx
